--- a/stayl.css
+++ b/stayl.css
@@ -347,7 +347,7 @@ footer{
 
 
 .check{
-    background: rgba(255, 255, 255, 0.4);
+    background: rgb(43, 0, 255);
     font-weight: 400;
     font-size: 14px;
 }
